Fix form label alignment from centered to upper-left alignment and update form styling for better UX

--- a/client/src/styles/scenes/DailyGrind.css
+++ b/client/src/styles/scenes/DailyGrind.css
@@ -71,11 +71,13 @@
 /* Forms */
 
 .form-group {
+  text-align: left;
   margin-bottom: 20px;
   width: 100%;
 }
 
 .form-label {
+  text-align: left;
   display: block;
   font-family: "Lato", sans-serif;
   font-weight: 600;
@@ -360,6 +362,7 @@
 
 .grid-layout {
   display: grid;
+  text-align: left;
 }
 
 .two-column-grid {
